--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://illya-pas.github.io/test-app/",
+  "homepage": "https://illya-pas.github.io/photos-app/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
